Fri Aug 27 14:50:24 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/tests/CIAO/Executor-Destructor/Exec_Dest_Status.h:

          compile fix.

Fri Aug 27 13:58:34 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/DevGuideExamples/Messenger/History_exec_i.cpp:
        * examples/DevGuideExamples/Messenger/Messenger_exec_i.cpp:
        * examples/DevGuideExamples/Messenger/Publication_exec_i.cpp:
          Use ACE_GUARD macro

Fri Aug 27 12:03:26 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * tests/Bug_3832_Regression/run_test.pl:

          change LM_ERROR to LM_DEBUG.  There's no reason an error should ever be produced
          from just starting up a locality manager.

Fri Aug 27 11:35:09 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/tests/CSLDeadline/Sender/CSL_DeadlineTest_Sender_exec.cpp:
        * connectors/dds4ccm/tests/CSLQoS/Receiver/CSL_QoSTest_Receiver_exec.cpp:
        * connectors/dds4ccm/tests/CSLQoS/Sender/CSL_QoSTest_Sender_exec.cpp:
        * connectors/dds4ccm/tests/CSLSampleRejected/Receiver/CSL_SRTest_Receiver_exec.cpp:
        * connectors/dds4ccm/tests/CSLUnexpStat/Receiver/CSL_USTest_Receiver_exec.cpp:
        * connectors/dds4ccm/tests/CSLUnexpStat/Sender/CSL_USTest_Sender_exec.cpp:
        * connectors/dds4ccm/tests/ContentFilteredTopic/EventListener/Receiver/CFTLE_Test_Receiver_exec.cpp:
        * connectors/dds4ccm/tests/ContentFilteredTopic/StateListener/Receiver/CFTLS_Test_Receiver_exec.cpp:
        * connectors/dds4ccm/tests/ListenOneByOne/Receiver/LOBO_Test_Receiver_exec.cpp:
        * connectors/dds4ccm/tests/On_Inconsistent_Topic/Receiver/OIT_Test_Receiver_exec.cpp:
        * connectors/dds4ccm/tests/On_Inconsistent_Topic/Sender/OIT_Test_Sender_exec.cpp:
        * connectors/dds4ccm/tests/PSLDeadline/Receiver/PSL_DeadlineTest_Receiver_exec.cpp:
        * connectors/dds4ccm/tests/PSLSampleLost/Receiver/PSL_SampleLost_Receiver_exec.cpp: